tests/snapshots/delete_operations_test__delete_line_and_paste.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
line 2
[l]ine 1
line 3
