tests/snapshots/delete_operations_test__delete_word_and_paste.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 1

Buffer:
whello [o]rld
