tests/snapshots/delete_operations_test__dgg_from_end.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 4

Buffer:
[l]ine 1
line 2
line 3
line 4
