tests/snapshots/delete_operations_test__multiple_delete_undo.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[o]ne two three four
